--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
     "test:ava": "ava",
     "test:liveReloadedAva": "ava --watch",
     "production": "npm run build && node build/main.js",
-    "ci": "npm run build && npm run ci:local:timed",
+    "ci": "npm-run-all -s build ci:local:timed:vuln",
+    "ci:snyk": "snyk test",
     "ci:remote": "npm-run-all -s clean:build build test:ava",
     "ci:local": "trevor",
     "ci:local:timed": "npm run ci:local | gnomon --type=elapsed-total",
+    "ci:local:timed:vuln": "npm-run-all -p ci:snyk ci:local | gnomon --type=elapsed-total",
     "ci:local:cache:install": "docker pull verdaccio/verdaccio",
     "ci:local:cache:run": "docker run -it --rm --name verdaccio -p 4873:4873 verdaccio/verdaccio",
     "ci:prepare": "npm install -g trevor gnomon"
