updated pkg meta

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node-starter",
-  "version": "1.0.0",
-  "description": "node-starter",
+  "name": "nommer",
+  "version": "0.1.0",
+  "description": "node_module path checker & optional node_module installer",
   "main": "build/main.js",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/servexyz/node-starter"
+    "url": "https://github.com/servexyz/nommer-lib"
   },
   "devDependencies": {
     "@ava/babel-preset-stage-4": "^3.0.0",
