nmInstall works on specific path
* Added bunch of todos to overhaul current test suite

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/register": "7.4.4",
     "ava": "^2.2.0",
     "babel-loader": "^8.0.6",
+    "chalk": "^2.4.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "nodemon": "^1.19.1",
     "nodemon-webpack-plugin": "^4.0.8",
@@ -24,6 +25,7 @@
     "npm-starter-sample-module": "0.0.4",
     "size-plugin": "^1.2.0",
     "source-map-loader": "^0.2.4",
+    "tacker": "^0.2.7",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5",
     "webpack-node-externals": "^1.7.2",
