--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon-webpack-plugin": "^4.0.8",
     "npm-run-all": "^4.1.5",
     "npm-starter-sample-module": "0.0.4",
+    "repo-genesis": "^0.5.10",
     "size-plugin": "^1.2.0",
     "source-map-loader": "^0.2.4",
     "tacker": "^0.2.7",
