--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "is-travis": "^2.0.0",
     "nodemon": "^1.19.1",
     "nodemon-webpack-plugin": "^4.0.8",
     "npm-run-all": "^4.1.5",
