Cleaned up readme and added keyword

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "url": "https://github.com/servexyz/nommer-lib"
   },
   "keywords": [
+    "servexyz",
     "node modules",
     "node_modules",
     "nommer",
